Algunos cambios menores