@@ -23,6 +23,8 @@ import java.io.InputStream;
 
 import java.io.PrintWriter;
 import java.net.URLDecoder;
+import java.util.Base64;
+import java.util.Base64.Decoder;
 
 /**
  * Created by irvin on 5/17/17.
@@ -163,13 +165,16 @@ public class AppResourcesMethods {
             System.out.println(receivedContent);
             URLDecoder.decode(receivedContent, "UTF8");
             String imageData = receivedContent.split(",")[1];
-            byte[] real = DatatypeConverter.parseBase64Binary(imageData);
-            //File newImage = new File("imageTestNow!.png");
+            String imageDataB = receivedContent.split(",")[3];
+            byte[] real = Base64.getDecoder().decode(imageData.substring(0, imageData.length()-1)); //DatatypeConverter.parseBase64Binary(imageData);
+            byte[] realB = Base64.getDecoder().decode(imageDataB.substring(0, imageDataB.length()-1)); //DatatypeConverter.parseBase64Binary(imageDataB);
             InputStream bit = new ByteArrayInputStream(real);
+            InputStream bitB = new ByteArrayInputStream(realB);
             try {
-                String type = receivedContent.split(",")[2].split(":")[1].replaceAll("\"", "");
+                String type = receivedContent.split(",")[4].split(":")[1].replaceAll("\"", "");
                 if(type.replaceAll("}","").equals("Piece")) {
-                    ImageIO.write(ImageIO.read(bit), "png", new File(".\\src\\main\\resources\\assets\\images\\Piece" + pieceCounter + ".png"));
+                    ImageIO.write(ImageIO.read(bit), "png", new File(".\\src\\main\\resources\\assets\\images\\PieceA" + pieceCounter + ".png"));
+                    ImageIO.write(ImageIO.read(bitB), "png", new File(".\\src\\main\\resources\\assets\\images\\PieceB" + pieceCounter + ".png"));
                 }else{
                     ImageIO.write(ImageIO.read(bit), "png", new File(".\\src\\main\\resources\\assets\\images\\Composition" + compositionCounter + ".png"));
                 }
@@ -207,26 +212,9 @@ public class AppResourcesMethods {
     @Consumes(MediaType.TEXT_PLAIN)
     public Response saveAttributes(String receivedContent){
         ResponseBuilder builder;
-        String data = receivedContent.substring(11);
-        data = data.replaceAll("\"", "");
-        data = data.replaceAll("\\[" , "");
-        data = data.replaceAll("]", "");
-        data = data.replaceAll("}", "");
-        System.out.println(data);
-        String[] values = data.split(",");
         try {
             PrintWriter writer = new PrintWriter(".\\src\\main\\resources\\assets\\images\\Piece" + pieceCounter + ".json");
-            writer.println("{");
-            for (int i = 0; i < values.length; i++){
-                if(!(values[i].equals(""))) {
-                    if((i % 2) == 0) {
-                        writer.print("\"" + values[i] + "\": ");
-                    }else{
-                        writer.print("\"" + values[i] + "\",\n");
-                    }
-                }
-            }
-            writer.print("\"Source\": \"assets/images/Piece" + pieceCounter + ".png\"\n}");
+            writer.print(receivedContent + "\"SourceFront\": \"assets/images/PieceA" + pieceCounter + ".png\",\n \"SourceFront\": \"assets/images/PieceB" + pieceCounter + ".png\"\n}");
             writer.close();
         }catch(Exception e){
 
